<resources>
    <string name="app_name">ColonelFund</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="button_member_list">Member List</string>
    <string name="button_event_list">Event List</string>
    <string name="button_create_event">Create Event</string>
    <string name="button_my_profile">My Profile</string>
    <string name="button_log_out">Log Out</string>
    <string name="fund_goal">Fund Goal:</string>
    <string name="fundGoalHint">1,000.00</string>
    <string name="current_funds">Current Funds:</string>
    <string name="associated_member">Associated Member:</string>
    <string name="member">Member:</string>
    <string name="event_date">Event Date:</string>
    <string name="event_date_hint">2018-07-04</string>
    <string name="event_time">Event Time:</string>
    <string name="event_time_hint">5:00 PM</string>
    <string name="eventTitleHint">Event Title</string>
    <string name="eventDescriptionHint">Description of event</string>
    <string name="address">Address:</string>
    <string name="addressHint">7171 E Sonoran Arroyo Mall\nPeralta Hall 230\nMesa AZ 85212</string>
    <string name="address1Label">Address 1:</string>
    <string name="address1Hint">7171 E Sonoran Arroyo Mall</string>
    <string name="address2Label">Address 2:</string>
    <string name="address2Hint">Peralta Hall 230</string>
    <string name="cityLabel">City:</string>
    <string name="cityHint">Mesa</string>
    <string name="stateLabel">State:</string>
    <string name="stateHint">AZ</string>
    <string name="zipCodeLabel">Zip Code:</string>
    <string name="zipCodeHint">85212</string>
    <string name="eventTypeLabel">Event Type:</string>
    <string name="eventTypeHint">Medical</string>
    <string name="button_donate">Donate</string>
    <string name="donate_to_event">Donate to Event</string>
    <string name="donate_to_member">Donate to Member</string>
    <string name="donation_amount">Donation Amount</string>
    <string name="email">Email Address:</string>
    <string name="phone">Phone Number:</string>
    <string name="username">Username</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fullname">Full Name:</string>
    <string name="dollarSign">$</string>
    <string name="paymentDescription">Payment Description</string>
    <string name="donationAmountPlaceholder">50.00</string>
    <string name="selectPaymentMethod">Select Payment Method</string>
    <string name="changePaymentMethod">Change Payment Method</string>
    <string name="googlePay">Google Pay</string>
    <string name="about_you">About You</string>
    <string name="donation_history">Donation History</string>
    <string name="account_info">Account Info</string>
    <string name="your_history_events">Your History/Events</string>
    <string name="logout_item">Log Out</string>
    <string name="summaryHeader">Thank you for your donation!</string>
    <string name="summarySubHeader">Take a screenshot or record this information for your records</string>
    <string name="donation_recipient">Donation Recipient</string>
    <string name="transactionID">Transaction ID</string>
    <string name="summaryContinueButton">Continue</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">861301034038497</string>
    <string name="fb_login_protocol_scheme">fb861301034038497</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="create_an_account">create an account</string>
    <string name="register_new_account">register new account</string>
    <string name="i_am">I am</string>
    <string name="admin_colonelfund_com">admin@colonelfund.com</string>
    <string name="userid">userID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_view_profile">Profile</string>
    <string name="title_activity_view_history">History/Events</string>

    <!-- Strings for main page -->
    <string name="announcements_main">Announcements</string>
    <string name="announcements_box">ColonelFund would like to thank everyone for using our fundraising app!
        \n\nIf you have any issues using the app, please direct all feedback to your ColonelFund representative.
        \n\nHave a great day!</string>
    <string name="top_contributors">Top Contributors</string>
    <string name="top_contributors_box">This is a placeholder for top contributors!</string>
    <string name="featured_events">Featured Events</string>
    <string name="featured_events_box">This is a placeholder for featured events!</string>
    <string name="link_your_account">Link Your Account</string>
    <string name="associated_events">Associated Events</string>
    <string name="johnsmith_email_com">johnsmith@email.com</string>
    <string name="full_name">Full Name</string>
    <string name="phoneHint">(555) 555-5555</string>
    <string name="fn">FN</string>

    <!-- Event Types -->
    <string-array name="eventTypes">
        <item>BBQ</item>
        <item>Emergency</item>
        <item>Medical</item>
        <item>Party</item>
        <item>Unknown</item>
    </string-array>

</resources>
