<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.colonelfund.colonelfund.CreateEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/createEventImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/txtEventTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:srcCompat="@drawable/img_placeholder" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/createEventImage"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <EditText
                android:id="@+id/txtEventTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/eventTitleHint"
                android:inputType="textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createEventImage"
                app:layout_constraintBottom_toTopOf="@id/txtEventDate"/>

            <TextView
                android:id="@+id/eventDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/event_date"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtEventDate"
                app:layout_constraintBottom_toBottomOf="@id/txtEventDate"/>

            <EditText
                android:id="@+id/txtEventDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/event_date_hint"
                android:inputType="date"
                app:layout_constraintTop_toBottomOf="@id/txtEventTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/eventDateLabel"
                app:layout_constraintBottom_toTopOf="@id/txtEventTime"/>

            <TextView
                android:id="@+id/eventTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/event_time"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtEventTime"
                app:layout_constraintBottom_toBottomOf="@id/txtEventTime"/>

            <EditText
                android:id="@+id/txtEventTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/event_time_hint"
                android:inputType="time"
                app:layout_constraintTop_toBottomOf="@id/txtEventDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@id/txtAddress1"/>

            <TextView
                android:id="@+id/address1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/address1Label"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtAddress1"
                app:layout_constraintBottom_toBottomOf="@id/txtAddress1"/>

            <EditText
                android:id="@+id/txtAddress1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/address1Hint"
                android:inputType="textPostalAddress"
                app:layout_constraintTop_toBottomOf="@id/txtEventTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@id/txtAddress2"/>

            <TextView
                android:id="@+id/address2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/address2Label"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtAddress2"
                app:layout_constraintBottom_toBottomOf="@id/txtAddress2"/>

            <EditText
                android:id="@+id/txtAddress2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/address2Hint"
                android:inputType="textPostalAddress"
                app:layout_constraintTop_toBottomOf="@id/txtAddress1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@id/txtCity"/>

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/cityLabel"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtCity"
                app:layout_constraintBottom_toBottomOf="@id/txtCity"/>

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/cityHint"
                android:inputType="textPostalAddress"
                app:layout_constraintTop_toBottomOf="@id/txtAddress2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@id/txtState"/>

            <TextView
                android:id="@+id/stateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/stateLabel"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtState"
                app:layout_constraintBottom_toBottomOf="@id/txtState"/>

            <EditText
                android:id="@+id/txtState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/stateHint"
                android:inputType="textPostalAddress"
                app:layout_constraintTop_toBottomOf="@id/txtCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@id/txtZipCode"/>

            <TextView
                android:id="@+id/zipCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/zipCodeLabel"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtZipCode"
                app:layout_constraintBottom_toBottomOf="@id/txtZipCode"/>

            <EditText
                android:id="@+id/txtZipCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/zipCodeHint"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/txtState"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@id/eventTypeSpinner"/>

            <TextView
                android:id="@+id/eventTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/eventTypeLabel"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/eventTypeSpinner"
                app:layout_constraintBottom_toBottomOf="@id/eventTypeSpinner"/>

            <Spinner
                android:id="@+id/eventTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtZipCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@+id/txtEventGoal" />

            <TextView
                android:id="@+id/fundGoalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/fund_goal"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtEventGoal"
                app:layout_constraintBottom_toBottomOf="@id/txtEventGoal"/>

            <TextView
                android:id="@+id/fundGoalDollarSignLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollarSign"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtEventGoal"
                app:layout_constraintTop_toTopOf="@id/txtEventGoal"
                app:layout_constraintBottom_toBottomOf="@id/txtEventGoal"/>

            <EditText
                android:id="@+id/txtEventGoal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/fundGoalHint"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/eventTypeSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtEventDate"
                app:layout_constraintBottom_toTopOf="@id/txtEventDescription"/>

            <EditText
                android:id="@+id/txtEventDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/eventDescriptionHint"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fundGoalLabel"
                app:layout_constraintBottom_toTopOf="@id/btnCreateEvent"/>

            <Button
                android:id="@+id/btnCreateEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/button_create_event"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEventDescription" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
